<resources>
    <string name="app_name">Ukraine News</string>
    <string name="fragment_article_item_template_image_description">Зображення новини</string>
    <string name="settings">Налаштування</string>
    <string name="sources">Джерела</string>
    <string name="banner_ad_unit_id">ca-app-pub-5823688689397702/3965946474</string>
    <string name="AD_APP_ID">ca-app-pub-5823688689397702~2489213275</string>
    <string name="network_error">Неможливо здійснити оновлення</string>
    <string name="view_on_site">Переглянути на сайті</string>
    <string name="fragment_settings_clear_storage_button">Очистити кеш</string>
    <string name="root_activity_close_notification">Натисніть ще раз, щоб вийти</string>
    <string name="fragment_settings_clear_cache_text">Ви можете очистити кеш, якщо щось іде не так</string>
    <string name="fragment_settings_email_us">Якщо у Вас є зауваження, або пропозиції — напишіть нам support@zeusapps.in.ua</string>
    <string name="splash_activity_loadingStatus">Завантаження каналів…</string>
    <string name="splash_activity_checkingStatus">Перевірка каналів…</string>
    <string name="splash_activity_errorMessage">Не вдалось отримати данні з серверу. Спробуйте пізніше.</string>
    <string name="splash_activity_oopsMessage">Невдача:(</string>
    <string name="fragment_sources_title">Джерела</string>
    <string name="fragment_article_connection_error">Не вдалось отримати дані з сервера</string>
    <string name="fragment_settings_articles_cleared">Статті видалені</string>
    <string name="fragment_settings_title">Налаштування</string>
    <string name="activity_root_hello_message">Вітаємо у додатку Ukraine News!</string>
    <string name="facebook_app_id">1383427461748579</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">axP5gEoxboLCrah7TwyYm0cWH</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">zrjVArOdpRJILWFAPddKX3u108Afek54r8oLYKFNVFFBjGaXeh</string>
    <string name="fragment_article_details_share_facebook">Поширити</string>
    <string name="fragment_article_details_share_other">Поділитись іншим способом</string>
    <string name="fragment_article_details_send_facebook">Відправити повідомленням</string>
    <string name="fragment_article_details_share_twitter">Поширити через Twitter</string>
    <string name="fragment_settings_article_template_text_view">Шаблон відображення новин:</string>
    <string name="fragment_settings_article_template_big">Велика</string>
    <string name="fragment_settings_article_template_small">Маленька</string>
    <string name="fragment_article_empty_update">Ви переглядаєте найсвіжіші новини</string>
    <string name="activity_splash_source_update">Оновлення %s…</string>
    <string name="fragment_top_stories_title">Останні новини</string>
    <string name="fragment_sources_load_failed">Не вдалось відобразити дерела</string>
</resources>
