<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/fragment_article_view_content">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        android:id="@+id/fragment_article_details_appBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/fragment_article_view_collapsingToolbar">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/fragment_article_item_template_image_description"

                android:id="@+id/fragment_article_view_image"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:elevation="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/fragment_article_details_nestedScrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffffff">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:text="Article title"

                android:id="@+id/fragment_article_view_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="#666"
                tools:text="Article source"

                android:id="@+id/fragment_article_view_source"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="#666"
                tools:text="Article published"

                android:id="@+id/fragment_article_view_published"/>


            <WebView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_article_view_articleWebView"/>

            <com.facebook.share.widget.ShareButton
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/fragment_article_details_share_facebook"
                android:id="@+id/fragment_article_details_shareFacebookButton"/>

            <com.facebook.share.widget.SendButton
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/fragment_article_details_send_facebook"
                android:id="@+id/fragment_article_details_sendFacebookButton"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="60dp"
                android:text="@string/fragment_article_details_share_other"
                android:id="@+id/fragment_article_details_shareOther"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_share_white_24dp"
        app:layout_anchor="@id/fragment_article_details_appBar"
        app:layout_anchorGravity="bottom|right|end"

        android:id="@+id/fragment_article_view_shareButton"/>
</android.support.design.widget.CoordinatorLayout>